# DankCaster

./: .gitignore  .travis.yml  Cargo.toml  README.md
dankcaster/: Cargo.toml
dankcaster/src/: lib.rs
gst-plugin/: Cargo.toml
gst-plugin/src/: lib.rs  plugin_once.rs  scene.rs  sink.rs  source.rs
gst-plugin/src/scene/: imp.rs  mod.rs
gst-plugin/src/sink/: imp.rs  mod.rs
gst-plugin/src/source/: imp.rs  mod.rs
gui/: Cargo.toml
gui/src/: main.rs
