[package]
name = "dankcaster-gst-plugin"
version = "0.1.0"
authors = ["Blaxar Waldarax <blaxar.waldarax@gmail.com>"]

[dependencies]
glib = "0.6"
gstreamer = "0.12.0"
gst-plugin = "0.3.1"
gobject-subclass = "0.2.1"
gstreamer-base = "0.12"
gstreamer-video = "0.12"
gstreamer-audio = "0.12"
byte-slice-cast = "0.2"
num-traits = "0.2"

[lib]
name = "gstdkcplugin"
crate-type = ["cdylib"]
path = "src/lib.rs"