[package]
name = "dankcaster-gst-plugin"
version = "0.1.0"
authors = ["Blaxar Waldarax <blaxar.waldarax@gmail.com>"]

[dependencies]
glib = { git = "https://github.com/gtk-rs/glib", features = ["subclassing"] }
gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing"] }
gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["subclassing"] }
gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-audio = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
byte-slice-cast = "0.2"
num-traits = "0.2"

[dev-dependencies]
dankcaster-gst-plugin = {path = "."} # For testing purposes

[lib]
name = "gstdkcplugin"
crate-type = ["cdylib"]
path = "src/lib.rs"